Fixed local URL.

--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@
 APP=/app
 # Path to the site installation relative to the current directory.
 WEBROOT=docroot
-# Local URL.
-LOCALDEV_URL=http://mysite.docker.amazee.io/
+# Local development URL. Make sure that there is no trailing slash in the value.
+LOCALDEV_URL=http://mysite.docker.amazee.io
 # Docker Compose project name. All containers will have this prefix.
 COMPOSE_PROJECT_NAME=mysite
 # Database connection details.
