--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ x-volumes:
 x-environment:
   &default-environment
   LAGOON_PROJECT: *project
+  # Local dev URL. Make sure that there is no trailing slash in the value.
   LAGOON_LOCALDEV_URL: ${LOCALDEV_URL:-http://mysite.docker.amazee.io}
   # Uncomment to enable xdebug and then restart via `ahoy up`
   #XDEBUG_ENABLE: "true"
