--- a/.docker/Dockerfile.cli
+++ b/.docker/Dockerfile.cli
@@ -13,7 +13,8 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
     && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
-RUN apk --update add jq
+RUN apk --update add jq clamav clamav-libunrar \
+    && freshclam
 
 ADD patches /app/patches
 ADD scripts /app/scripts
