--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -12,8 +12,8 @@ commands:
       && ahoy up -- --build --force-recreate \
       && ahoy install-dev \
       && ahoy install-site \
-      && ahoy drush "en tide_site -y" \
-      && if [ "$COMPOSE" != "composer.json" ]; then printenv; ahoy install-module; fi \
+      && ahoy drush en tide_test -y \
+      && if [ "$COMPOSE" != "composer.json" ]; then ahoy install-module; fi \
       && ahoy line "Build complete" \
       && ahoy info 1
 
@@ -104,6 +104,7 @@ commands:
       ahoy down \
       && ([ -d .git ] && git ls-files --directory --other -i --exclude-from=.gitignore ${WEBROOT} | grep -v "settings.local.php" | grep -v "services.local.yml" | xargs chmod -Rf 777 || true) \
       && ([ -d .git ] && git ls-files --directory --other -i --exclude-from=.gitignore ${WEBROOT} | grep -v "settings.local.php" | grep -v "services.local.yml" | xargs rm -Rf || true) \
+      && rm -Rf *.lock \
       && rm -Rf vendor \
       && rm -Rf screenshots
 
