Added suggest flag to .env.

--- a/.env
+++ b/.env
@@ -25,3 +25,6 @@ MYSQL_PORT=3306
 
 # Uncomment this for site build and set the profile name.
 # DRUPAL_PROFILE=
+
+# Uncomment to run the build in suggest mode.
+# INSTALL_SUGGEST=1
