--- a/behat.yml
+++ b/behat.yml
@@ -9,13 +9,13 @@ default:
     default:
       paths: [ '%paths.base%/tests/behat/features' ]
       contexts:
-        - FeatureContext
-        - Drupal\DrupalExtension\Context\MinkContext
-        - Drupal\DrupalExtension\Context\MarkupContext
-        - Drupal\DrupalExtension\Context\MessageContext
-        - IntegratedExperts\BehatScreenshotExtension\Context\ScreenshotContext
-        - Ubirak\RestApiBehatExtension\RestApiContext
-        - Ubirak\RestApiBehatExtension\Json\JsonContext
+      - FeatureContext
+      - Drupal\DrupalExtension\Context\MinkContext
+      - Drupal\DrupalExtension\Context\MarkupContext
+      - Drupal\DrupalExtension\Context\MessageContext
+      - IntegratedExperts\BehatScreenshotExtension\Context\ScreenshotContext
+      - Ubirak\RestApiBehatExtension\RestApiContext
+      - Ubirak\RestApiBehatExtension\Json\JsonContext
 
   extensions:
     Behat\MinkExtension:
@@ -42,24 +42,12 @@ default:
         success_message_selector: '.messages.status'
         warning_message_selector: '.messages.warning'
       region_map:
-        alert: '.region-alert'
-        header: '.region-header'
-        header_search: '.region-header-search'
-        menu: '.region-menu'
-        breadcrumb: '.region-breadcrumb'
-        feature: '.region-feature'
-        above_content: '.region-above-content'
-        content: '.region-content'
-        sidebar: '.region-sidebar'
+        header: '.layout-header'
+        breadcrumb: '.layout-breadcrumb'
+        content: '.layout-content'
+        sidebar: '.layout-sidebar'
         above_footer: '.region-above-footer'
-        footer_first: '.region-footer-first'
-        footer_second: '.region-footer-second'
-        footer_third: '.region-footer-third'
-        footer_fourth: '.region-footer-fourth'
-        footer_fifth: '.region-footer-fifth'
-        footer_sixth: '.region-footer-sixth'
-        splash: '.region-splash'
-        disabled: '.region-disabled'
+        footer: '.layout-footer'
     # Allows to capture HTML and JPG screenshots (based on the driver used).
     IntegratedExperts\BehatScreenshotExtension:
       dir: '%paths.base%/screenshots'
