Added current dir support for project name.

--- a/.env
+++ b/.env
@@ -3,28 +3,46 @@
 #
 # It is used by Ahoy and other scripts to read default values.
 #
-# The values must be scalar (cannot be another variable).
+# The values must be scalar (cannot be another variable). This file must have
+# at least 1 valid (exportable) assignment of value.
 #
 # You may create .env.local file and store your local environment variables
 # there - it will also be loaded by Ahoy and it is excluded from git.
+#
+# This file may be left as is to assume default values specified in .ahoy.yml.
+
+# Project name.
+# Defaults to the name of the current directory with stripped hyphens and
+# underscores.
+# PROJECT_NAME=mysite
 
 # Path to the root of the project inside of the container.
-APP=/app
-# Path to the site installation relative to the current directory.
-WEBROOT=docroot
-# Local development URL. Make sure that there is no trailing slash in the value.
-LOCALDEV_URL=http://mysite.docker.amazee.io
-# Docker Compose project name. All containers will have this prefix.
-COMPOSE_PROJECT_NAME=mysite
-# Database connection details.
-MYSQL_HOST=mariadb
-MYSQL_PORT=3306
+# APP=/app
 
-# Uncomment for site build.
-# COMPOSER=composer.json
+# Path to the site installation relative to the current directory.
+# WEBROOT=docroot
+
+# Local development URL.
+# Make sure that there is no trailing slash in the value.
+# Defaults to http://<CURRENTDIR>.docker.amazee.io
+# LOCALDEV_URL=http://mysite.docker.amazee.io
+
+# Docker Compose project name.
+# All containers will have this prefix.
+# Defaults to $PROJECT_NAME
+# COMPOSE_PROJECT_NAME=mysite
+
+# Database connection details.
+# MYSQL_HOST=mariadb
+# MYSQL_PORT=3306
+
+# Change to composer.json for site build.
+COMPOSER=composer.build.json
 
 # Uncomment this for site build and set the profile name.
 # DRUPAL_PROFILE=
 
 # Uncomment to run the build in suggest mode.
+# In this mode, modules from "suggested" part of composer.json will be
+# installed.
 # INSTALL_SUGGEST=1
