--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -133,7 +133,14 @@ entrypoint:
 - "-c"
 - |
   [ -f .env ] && export $(grep -v '^#' .env | xargs) && [ -f .env.local ] && export $(grep -v '^#' .env.local | xargs)
-  export COMPOSER=${COMPOSER:-composer.build.json}
+  PROJECT_NAME=${PROJECT_NAME:-$(basename $(pwd))} && export PROJECT_NAME=${PROJECT_NAME/[_-]/}
+  export APP=${APP:-/app}
+  export WEBROOT=${WEBROOT:-docroot}
+  export MYSQL_HOST=${MYSQL_HOST:-mariadb}
+  export MYSQL_PORT=${MYSQL_PORT:-3306}
+  export COMPOSE_PROJECT_NAME=${COMPOSE_PROJECT_NAME:-$PROJECT_NAME}
+  export LOCALDEV_URL=${LOCALDEV_URL:-http://$PROJECT_NAME.docker.amazee.io}
+  export COMPOSER=${COMPOSER:-composer.json}
   bash -c "$0" "$@"
 - '{{cmd}}'
 - '{{name}}'
