--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # To ignore OS temporary files use global .gitignore
 # https://help.github.com/articles/ignoring-files/#create-a-global-gitignore
 
-vendor
-node_modules
+/composer.lock
+/composer.build.json
+/composer.build.lock
+/docroot
+/dpc-sdp
 .env.local
 docker-compose.override.yml
-docroot
+screenshots
+vendor
