--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ aliases:
           at: /workspace
       - checkout
       # Init environment for development.
-      - run: if [ -f "./dev-init.sh" ] && [ ! "DEV_TOOLS" ]; then ./dev-init.sh; fi
+      - run: if [ -f "./dev-init.sh" ] && [ ! "$DEV_TOOLS" ]; then ./dev-init.sh; fi
       - setup_remote_docker:
           docker_layer_caching: true
       - run: .circleci/build.sh
