--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -6,14 +6,14 @@ commands:
     usage: Build or rebuild project.
     cmd: |
       ahoy clean \
-      && if [ "$COMPOSE" != "composer.json" ]; then ahoy composer-merge; fi \
-      && if [ "$COMPOSE" != "composer.json" ]; then ahoy link-package; fi \
+      && if [ "$COMPOSER" != "composer.json" ]; then ahoy composer-merge; fi \
+      && if [ "$COMPOSER" != "composer.json" ]; then ahoy link-package; fi \
       && (docker network prune -f > /dev/null && docker network inspect amazeeio-network > /dev/null || docker network create amazeeio-network) \
       && ahoy up -- --build --force-recreate \
       && ahoy install-dev \
       && if [ "$DRUPAL_PROFILE" ]; then ahoy install-profile; fi \
       && ahoy install-site \
-      && if [ "$COMPOSE" != "composer.json" ]; then ahoy install-module; fi \
+      && if [ "$COMPOSER" != "composer.json" ]; then ahoy install-module; fi \
       && ahoy drush en tide_test -y \
       && ahoy line "Build complete" \
       && ahoy info 1
