--- a/.env
+++ b/.env
@@ -16,6 +16,11 @@
 # underscores.
 # PROJECT_NAME=mysite
 
+# Docker Compose project name.
+# All containers will have this prefix.
+# Defaults to $PROJECT_NAME
+# COMPOSE_PROJECT_NAME=mysite
+
 # Path to the root of the project inside of the container.
 # APP=/app
 
@@ -26,11 +31,6 @@
 # Make sure that there is no trailing slash in the value.
 # Defaults to http://<CURRENTDIR>.docker.amazee.io
 # LOCALDEV_URL=http://mysite.docker.amazee.io
-
-# Docker Compose project name.
-# All containers will have this prefix.
-# Defaults to $PROJECT_NAME
-# COMPOSE_PROJECT_NAME=mysite
 
 # Database connection details.
 # MYSQL_HOST=mariadb
@@ -46,3 +46,9 @@ COMPOSER=composer.build.json
 # In this mode, modules from "suggested" part of composer.json will be
 # installed.
 # INSTALL_SUGGEST=1
+
+# Uncomment to install brand new site.
+# INSTALL_NEW_SITE=1
+
+# Uncomment to refresh search API on deployment.
+# DRUPAL_REFRESH_SEARCHAPI=1
