--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,11 @@ x-environment:
   # Local dev URL populated from the environment. Do not override here. Instead,
   # specify the value in .env file.
   LAGOON_LOCALDEV_URL: ${LOCALDEV_URL:-http://mysite.docker.amazee.io}
-  # Uncomment to enable xdebug and then restart via `ahoy up`.
+  GITHUB_TOKEN: ${GITHUB_TOKEN:-}
+  BAY_KEY: ${BAY_KEY:-}
+  LAGOON_ENVIRONMENT_TYPE: ${LAGOON_ENVIRONMENT_TYPE:-local}
+  DRUPAL_REFRESH_SEARCHAPI: ${DRUPAL_REFRESH_SEARCHAPI:-}
+  # Uncomment to enable Xdebug and then restart via `ahoy up`.
   #XDEBUG_ENABLE: "true"
 
 services:
