--- a/.env
+++ b/.env
@@ -52,3 +52,6 @@ COMPOSER=composer.build.json
 
 # Uncomment to refresh search API on deployment.
 # DRUPAL_REFRESH_SEARCHAPI=1
+
+# Uncomment and add space-separated list of targets.
+# PHPCS_TARGETS="src tests"
