Defaulted composer to composer.json in docker-compose and dockerfile.
This is to allow proper handling by Bay.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       context: .
       dockerfile: .docker/Dockerfile.cli
       args:
-        - COMPOSER=${COMPOSER:-composer.build.json}
+        - COMPOSER=${COMPOSER:-composer.json}
     image: *project
     environment:
       << : *default-environment
