Added drush aliases for bay.

--- a/.env
+++ b/.env
@@ -55,3 +55,6 @@ COMPOSER=composer.build.json
 
 # Uncomment and add space-separated list of targets.
 # PHPCS_TARGETS="src tests"
+
+# Uncomment below if Bay integration is enabled.
+# BAY_INTEGRATION_ENABLED=1
