--- a/.env
+++ b/.env
@@ -21,6 +21,9 @@
 # Defaults to $PROJECT_NAME
 # COMPOSE_PROJECT_NAME=mysite
 
+# Drupal module prefix for site-specific modules.
+# DRUPAL_MODULE_PREFIX=mysite
+
 # Path to the root of the project inside of the container.
 # APP=/app
 
