--- a/.env
+++ b/.env
@@ -51,7 +51,7 @@ COMPOSER=composer.build.json
 # INSTALL_SUGGEST=1
 
 # Uncomment to install brand new site.
-# INSTALL_NEW_SITE=1
+INSTALL_NEW_SITE=1
 
 # Uncomment to refresh search API on deployment.
 # DRUPAL_REFRESH_SEARCHAPI=1
