--- a/.env
+++ b/.env
@@ -56,8 +56,8 @@ INSTALL_NEW_SITE=1
 # Uncomment to refresh search API on deployment.
 # DRUPAL_REFRESH_SEARCHAPI=1
 
-# Uncomment and add space-separated list of targets.
-# PHPCS_TARGETS="src tests"
+# Uncomment and add comma-separated list of targets (no spaces).
+# PHPCS_TARGETS="src,tests"
 
 # Uncomment below if Bay integration is enabled.
 # BAY_INTEGRATION_ENABLED=1
