--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,8 +116,7 @@ services:
       args:
       - ES_TPL=${ES_TPL:-elasticsearch.yml}
     labels:
-      lagoon.type: custom
-      lagoon.template: .docker/.lagoon.elasticsearch.yml
+      lagoon.type: none
 
   chrome:
     image: selenium/standalone-chrome
