--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "license": "GPL-2.0-or-later",
     "type": "drupal-module",
     "require": {
-        "dpc-sdp/tide_core": "dev-ci"
+        "dpc-sdp/tide_core": "^1.0"
     },
     "suggest": {
-        "dpc-sdp/tide_media:dev-ci": "Media and related configuration for Tide Drupal 8 distribution"
+        "dpc-sdp/tide_media:^1.0": "Media and related configuration for Tide Drupal 8 distribution"
     }
 }
