--- a/.env
+++ b/.env
@@ -12,8 +12,7 @@
 # This file may be left as is to assume default values specified in .ahoy.yml.
 
 # Project name.
-# Defaults to the name of the current directory with stripped hyphens and
-# underscores.
+# Defaults to the name of the current directory.
 # PROJECT_NAME=mysite
 
 # Docker Compose project name.
