--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -2,7 +2,7 @@
 ahoyapi: v2
 
 commands:
-  build:
+  rebuild:
     usage: Build or rebuild project.
     cmd: |
       ahoy clean \
@@ -10,6 +10,18 @@ commands:
       && if [ "$COMPOSER" != "composer.json" ]; then ahoy link-package; fi \
       && (docker network prune -f > /dev/null && docker network inspect amazeeio-network > /dev/null || docker network create amazeeio-network) \
       && ahoy up -- --build --force-recreate \
+      && ahoy install-dev \
+      && if [ "$COMPOSER" != "composer.json" ] && [ "$DRUPAL_PROFILE" ]; then ahoy init-profile; fi \
+      && ahoy install-site \
+      && if [ "$COMPOSER" != "composer.json" ]; then ahoy init-module; fi \
+      && ahoy drush en tide_test -y \
+      && ahoy line "Build complete" \
+      && ahoy info 1
+
+  build:
+    usage: Build project.
+    cmd: |
+      ahoy up \
       && ahoy install-dev \
       && if [ "$COMPOSER" != "composer.json" ] && [ "$DRUPAL_PROFILE" ]; then ahoy init-profile; fi \
       && ahoy install-site \
