Added unlimited memory for composer.

--- a/.ahoy.yml
+++ b/.ahoy.yml
@@ -188,6 +188,7 @@ entrypoint:
   export COMPOSE_PROJECT_NAME=${COMPOSE_PROJECT_NAME:-$PROJECT_NAME}
   export LOCALDEV_URL=${LOCALDEV_URL:-http://${PROJECT_NAME/[_ ]/-}.docker.amazee.io}
   export COMPOSER=${COMPOSER:-composer.json}
+  export COMPOSER_MEMORY_LIMIT=-1
   export DRUPAL_PROFILE=${DRUPAL_PROFILE:-}
   export DRUPAL_MODULE_PREFIX=${DRUPAL_MODULE_PREFIX:-mysite}
   PHPCS_TARGETS=${PHPCS_TARGETS:-.} && export PHPCS_TARGETS=${PHPCS_TARGETS//,/ }
