--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,6 @@
         "dpc-sdp/tide_core": "dev-hotfix/1.2.0"
     },
     "suggest": {
-        "dpc-sdp/tide_media:^1.0": "Media and related configuration for Tide Drupal 8 distribution"
+        "dpc-sdp/tide_media:dev-hotfix/1.2.1": "Media and related configuration for Tide Drupal 8 distribution"
     }
 }
