--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,12 @@
     },
     "suggest": {
         "dpc-sdp/tide_media:1.2.2": "Media and related configuration for Tide Drupal 8 distribution"
+    },
+    "extra": {
+        "patches": {
+            "dpc-sdp/tide_core": {
+                "[SDPA-2523] All existing content should default to 'Copyright' licence type - https://github.com/dpc-sdp/tide_core/pull/68": "https://patch-diff.githubusercontent.com/raw/dpc-sdp/tide_core/pull/68.patch"
+            }
+        }
     }
 }
