--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,9 @@
     "license": "GPL-2.0-or-later",
     "type": "drupal-module",
     "require": {
-        "dpc-sdp/tide_core": "1.2.1"
+        "dpc-sdp/tide_core": "dev-feature/SDPA-2523_redo_SDPA-309 as 1.2.1"
     },
     "suggest": {
         "dpc-sdp/tide_media:1.2.2": "Media and related configuration for Tide Drupal 8 distribution"
-    },
-    "extra": {
-        "patches": {
-            "dpc-sdp/tide_core": {
-                "[SDPA-2523] All existing content should default to 'Copyright' licence type - https://github.com/dpc-sdp/tide_core/pull/68": "https://patch-diff.githubusercontent.com/raw/dpc-sdp/tide_core/pull/68.patch"
-            }
-        }
     }
 }
