Pinned Chrome image to v74.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,7 +124,7 @@ services:
       lagoon.type: none
 
   chrome:
-    image: selenium/standalone-chrome
+    image: selenium/standalone-chrome:3.141.59-oxygen
     shm_size: '1gb'
     environment:
       << : *default-environment
